# isaac_so_arm101

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
assets/rm_eco65/urdf/: ECO65-B.urdf
assets/rm_eco65/urdf/ECO65-B/: .asset_hash  ECO65-B.usd  config.yaml
docs/: TRAINING_LOG.md
logs/rsl_rl/reach/2026-02-21_22-05-24/: events.out.tfevents.1771682735.gpufree-container.36410.0  model_0.pt  model_100.pt  model_150.pt  model_200.pt  model_250.pt  model_300.pt  model_350.pt  model_400.pt  model_450.pt  model_50.pt  model_500.pt  model_550.pt  model_600.pt  model_650.pt  model_700.pt  model_750.pt  model_800.pt  model_850.pt  model_900.pt  model_950.pt  model_999.pt
logs/rsl_rl/reach/2026-02-22_00-02-57/: events.out.tfevents.1771689787.gpufree-container.89439.0  model_0.pt  model_100.pt  model_150.pt  model_200.pt  model_250.pt  model_300.pt  model_350.pt  model_400.pt  model_450.pt  model_50.pt  model_500.pt  model_550.pt  model_600.pt  model_650.pt  model_700.pt  model_750.pt  model_800.pt  model_850.pt  model_900.pt  model_950.pt  model_999.pt
logs/rsl_rl/reach/2026-02-22_00-25-20/: events.out.tfevents.1771691151.gpufree-container.113526.0
scripts/: convert_urdf_to_usd.py
src/isaac_so_arm101/: ui_extension_example.py
src/isaac_so_arm101/robots/: __init__.py
src/isaac_so_arm101/scripts/: list_envs.py  random_agent.py  zero_agent.py
src/isaac_so_arm101/tasks/: __init__.py
trajectory_logs/: traj_model_150_20260222_013558.csv  traj_model_1550_20260222_032625.csv  traj_model_250_20260222_034752.csv
(+1011 files in other folders)
